--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-  "predeploy": "npm run build",
-  "deploy" : "gh-pages -d build"
+
+  "deploy" : "node deploy.sh"
   },
   "dependencies": {
     "core-js": "^3.6.5",
